@startuml UMLModule4Ex1
abstract class AWeapon {
  - _name: string
  - _apCost: int
  - _damage: int
  + AWeapon(string, int, int)
  + ~AWeapon()
  + getName(): string
  + getAPCost(): int
  + getDamage(): int
  + Attack(): void
}

class Character {
  - _name: string
  - _ap: int
  - AWeapon *_weapon
  + Character(string)
  + ~Character()
  + recoverAP(): void
  + equip(AWeapon*): void
  + attack(Enemy*): void
  + getName(): string
  + getAP(): int
  + getWeapon(): AWeapon*
}

interface Enemy {
  - _hp: int
  - _type: string
  + Enemy(int, string)
  + ~Enemy()
  + getType(): string
  + getHP(): int
  + takeDamage(int): void
}

class PlasmaRifle {
  - _name: string = "Plasma Rifle"
  - _apCost: int = 5
  - _damage: int = 21
  + PlasmaRifle()
  + ~PlasmaRifle()
  + attack(): void
}

class PowerFist {
  - _name: string = "Power Fist"
  - _apCost: int = 8
  - _damage: int = 50
  + PowerFist()
  + ~PowerFist()
  + attack(): void
}

class RadScorpion {
  + RadScorpion()
  + ~RadScorpion()
  + attack(): void
}

class SuperMutant {
  + SuperMutant()
  + ~SuperMutant()
  + attack(): void
}
Character *-- "1" AWeapon
Character o-- "0..*" Enemy
AWeapon <|-- PlasmaRifle
AWeapon <|-- PowerFist
Enemy <|-- RadScorpion
Enemy <|-- SuperMutant



@enduml
